<resources>
    <string name="app_name">EduAccess</string>
    <string name="login">Login</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="firstName">First name</string>
    <string name="personal_data">Personal Data</string>
    <string name="lastName">Last name</string>
    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="confirm">Confirm</string>
    <string name="main_menu">Main Menu</string>
    <string name="video">Video</string>
    <string name="eduaccess">EduAccess</string>
    <string name="eduacces">EduAcces</string>
    <string name="how_to_get_video_thumbnail_from_youtube_url">How to get video thumbnail from youtube url.</string>
    <string name="python_in_2_hours">Python in 2 hours</string>
    <string name="feature_1">Feature 1</string>
    <string name="feature_2">feature 2</string>
    <string name="mentoring">Mentoring</string>
    <string name="video_teacher">Video teacher</string>
    <string name="video_title">Video title</string>
    <string name="python_fast_track">Python Fast Track</string>
    <string name="let_s_fin_the_a_with_us">Let\'s fin the \'A\' with us!</string>
    <string name="please_sign_in_to_view_personalized_recommendations">Please sign in to view personalized recommendations</string>
    <string name="login_link_welcome">Login</string>
    <string name="last_class_attended">Last Class Attended</string>
</resources>