<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50sp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:src="@drawable/login_image" />

    <TextView
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an Account?"
        android:textColor="#808080"
        android:layout_marginTop="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#1E69B2" />

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_in_with"
        android:textColor="#808080"
        android:gravity="center"
        android:layout_marginTop="70sp"/>

    <ImageView
        android:id="@+id/googleButtonSignin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/google" />-->

</LinearLayout>