<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-8dp">

    <!--container profile-->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="412dp"
        android:layout_height="155dp"
        android:background="#B4D4FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--profile container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/greetUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="Greeting"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/greetUser"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="-10sp"
                android:text="Username"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greetUser"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571"
                app:shapeAppearanceOverlay="@style/circular"
                app:srcCompat="@drawable/default_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/mainMenu"
        android:layout_width="156dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_menu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <!-- Button Logout -->

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/videoFeature"
        android:layout_width="108dp"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu">

        <!--Image for join class feature-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/video_feature_icon" />

        <!--text information feature-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="@string/video" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/joinMentor"
        android:layout_width="108dp"
        android:layout_height="143dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/videoFeature"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/joinClass"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu">

        <!--Image for join class mentoring-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/mentoring_feature_icon" />

        <!--text information mentoring-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="@string/mentoring" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/joinClass"
        android:layout_width="108dp"
        android:layout_height="143dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/videoFeature"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/joinMentor"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/videoFeature"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu">

        <!--Image for join class feature-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/class_feature_icon" />

        <!--text information feature-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="Class" />
    </androidx.cardview.widget.CardView>

    <!-- Popular Feature -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularFeatures"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="16dp"
            android:elevation="2dp"
            android:layout_width="380dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/popularContent"
                    android:layout_width="125dp"
                    android:layout_height="131dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:src="@drawable/class_feature_icon" />

                <TextView
                    android:id="@+id/popularContentTitle"
                    android:layout_width="215dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="21dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="@string/python_fast_track"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contentPopuler"
                    android:layout_width="152dp"
                    android:layout_height="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="84dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="Programming"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="221dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contentPopuler"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="18dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="Learn the basics of programming with the Python language, guaranteed job-ready!" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/popularFeatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Popular Feature"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoFeature" />

</androidx.constraintlayout.widget.ConstraintLayout>