<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassActivity">

    <TextView
        android:id="@+id/lastClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/last_class_attended"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <!-- Popular Feature -->

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastClass"
        app:layout_constraintVertical_bias="0.026">

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:elevation="2dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/popularContent"
                    android:layout_width="125dp"
                    android:layout_height="131dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="9dp"
                    android:src="@drawable/python_class_lesson" />

                <TextView
                    android:id="@+id/popularContentTitle"
                    android:layout_width="215dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="17dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="Basic Python Class"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contentPopuler"
                    android:layout_width="152dp"
                    android:layout_height="27dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="80dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="Programming"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="151dp"
                    android:layout_height="22dp"
                    android:layout_below="@+id/contentPopuler"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="81dp"
                    android:layout_marginBottom="34dp"
                    android:layout_toEndOf="@+id/popularContent"
                    android:text="1hr 30min • 12 lesson" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/enrolledClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Enrolled Class"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/joinClass"
        android:layout_width="108dp"
        android:layout_height="143dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/videoFeature"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/joinMentor"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/videoFeature"
        app:layout_constraintTop_toBottomOf="@+id/enrolledClass">

        <!--Image for join class feature-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/keeplearning_image" />

        <!--text information feature-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="Class" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/videoFeature"
        android:layout_width="108dp"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrolledClass">

        <!--Image for join class feature-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/class_one" />

        <!--text information feature-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="@string/video" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/joinMentor"
        android:layout_width="108dp"
        android:layout_height="143dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/videoFeature"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/joinClass"
        app:layout_constraintTop_toBottomOf="@+id/enrolledClass">

        <!--Image for join class mentoring-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/python_class_lesson"/>

        <!--text information mentoring-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="108sp"
            android:gravity="center"
            android:text="@string/mentoring" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>